--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" rel="icon" />
-    
     <title>Science with Subhrajoti</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
@@ -35,7 +34,7 @@
                     <h2 class="text-light pt-1 ml-5 pl-2 d-none d-md-block">Science with Subhrajoti</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="btn"><i class="fa fa-bars"></i></span>
+                    <span class="btn"><i class="fa fa-bars">Menu</i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
@@ -189,7 +188,6 @@
 
                                     color: white;
                                     border: 1px solid white;
-                                    transition:ease-in .5;
                                 }
 
                                 .a_btn {
@@ -229,39 +227,39 @@
                                             </article>
                                         </div>
                                     </div>
-                                    <article style="text-align;left;padding: 20px;font-size:25px;">
+                                    <article style="text-align;left;padding:15px;font-size:25px;max-width:100%">
                                         <section style="font-size:25px;">
-                                            <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">Little Bit About Myself:</h3>
-                                            <ul style=" color:white;font-weight:bold;text-indent:20px;color:white; ">
+                                            <h3 style="font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">Little Bit About Myself:</h3>
+                                            <ul style="color:white;font-weight:bold;text-indent:20px;color:white;">
                                                 <li style="color:white;">Former CBSE student</li>
                                                 <li style="color:white;">Completed my 10th with 89.6% score in CBSE</li>
-                                                <li style="color:white;">Pursued Science in 12th(PCMB) in CBSE,</li>
-                                                <li style="color:white;">got 6.0 SGPA in Sem 6 in B.Sc Physics Honours at University Of Calcutta,</li>
-                                                <li style="color:white;">studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development</li>
+                                                <li style="color:white;">Pursued Science in 12th CBSE(PCMB),</li>
+                                                <li style="color:white;">got 6.0 SGPA in Sem 6 of B.Sc Physics Honours at University Of Calcutta</li>
+                                                <li style="color:white;">studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development(MERN)</li>
                                             </ul>
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">My Skills:</h3>
-                                            <ul id="science" style=" color:white;font-weight:bold;text-indent:20px;color:white; ">
-                                                <li style="color:white;">HTML 5</li>
-                                                <li style="color:white;">CSS</li>
-                                                <li style="color:white;">Python</li>
-                                                <li style="color:white;">BootStrap</li>
-                                                <li style="color:white;">JavaScript</li>
-                                                <li style="color:white;">SQL</li>
-                                                <li style="color:white;">MongoDB(NoSQL)</li>
+                                            <ul id="science" style="list-style-type:none;color:white;font-weight:bold;text-indent:20px;color:white;display:flex;flex-wrap:wrap;flex-direction:row;justify-content:center;">
+                                                <li class="li">HTML</li>
+                                                <li class="li">SQL</li>
+                                                <li class="li">CSS</li>
+                                                <li class="li">Python</li>
+                                                <li class="li">BootStrap</li>
+                                                <li class="li">JavaScript</li>
+                                                <li class="li">MongoDB</li>
                                             </ul>
                                             <section>
                                                 <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px lightgreen; margin-left:5px;"> What is Science? </h3>
                                                 <p style="font-weight:bold;text-indent:20px;color:white; ">
                                                     Science is derived from the Latin word <i>"Scientia"</i> which means "Knowledge", and Physics is derived from the Greek word "φuσισ (phusis)" meaning "Nature" itself. And in the words of Great Physicists Sir Einstien: "All of science is nothing more than the refinement of everyday thinking."</p>
                                                 <p style="font-weight:bold;text-indent:20px;  color:white;  ">
-                                                    In my view, Science helps us understand the overall and ultimate perspective of the existence of everything and nothing.
-                                                    Hence, enabling us to have proper data and algorithms(step-by-step instructions) on what, why, and how things around us work in a wider view! </p>
+                                                    In my view, Science subject helps us to understand the overall and ultimate perspective on what the whole existence of everything and nothing is based.
+                                                    Hence, enabling us to have proper data and algorithms(step-by-step instructions) on how things around us work in a wider view! </p>
                                             </section>
                                         </section>
                                         <section style="font-size:25px;">
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; "> &gt; My motto: </h3>
                                             <p style=" font-weight:bold;text-indent:20px;color:white;">
-                                                Learning is the way to live life to its fullest and make it even more cherished and prosperous with the light of knowledge we get from our Learning curve.</p>
+                                                I think that learning is the way to live life to its fullest and make it even more cherished and prosperous with the light of knowledge that we get from the Learning curve of our lives.</p>
 
 
 
@@ -294,6 +292,9 @@
 
                                     section>div:hover {
                                         width: 95%;
+                                        padding: 10px;
+                                        height: 105%;
+                                        transition: ease-out, 0.3s;
                                     }
 
                                     .sectext {
@@ -524,10 +525,10 @@
         <div class="row p-0 m-0">
             <div class="col-12 col-md-6 p-3 text-center">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" class="img1" alt="">
-                <ul class="p-0" style="list-style-type:none;display:flex;flex-direction:row;justify-content:center;">
-                    <li><a href="https://twitter.com/Subhrajoti2003" target="_blank"><i class="font-icon fa-brands fa-twitter m-2" aria-hidden="true"></i></a></li>
-                    <li><a href="subhrajotichakrabarty2018@gmail.com" target="_blank"><i class="font-icon fa-brands fa-google m-2" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/subhrajoti-chakrabarty-254728270/" target="_blank"><i class="font-icon fa-brands fa-linkedin m-2" aria-hidden="true"></i></a></li>
+                <ul class="p-0" style="list-style-type:none;display:flex;flex-direction:row;justify-content:space-around;">
+                    <li><a href="https://twitter.com/Subhrajoti2003" target="_blank">Twitter</a></li>
+                    <li><a href="subhrajotichakrabarty2018@gmail.com" target="_blank">Gmail</a></li>
+                    <li><a href="https://www.linkedin.com/in/subhrajoti-chakrabarty-254728270/" target="_blank">Linkedin</a></li>
                 </ul>
                 <p style="font-size:15px;">Mato, near GopalTola, Howrah, West-Bengal, India,711408.</p>
             </div>
@@ -555,8 +556,6 @@
             <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
         </div>
     </footer>
-    <script src="script.js"></script>
-    <script src="index.js"></script>
 </body>
 
 </html>
