--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
             <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
