--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Science with Subhrajoti</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="script.js"></script>
     <style>
         body {
             font-weight: bold;
@@ -31,8 +30,13 @@
 
             <nav class="navbar navbar-expand-lg navbar-light br">
                 <a class="navbar-brand" href="https://www.youtube.com/@subhrajotichakrabarty/featured">
-                    <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" style="float:left;height:50px;width:50px;border-radius:100px; box-shadow:0 4px 8px white;   " class=" d-md-inline" />
-                    <h2 class="text-light pt-1 ml-5 pl-2 d-none d-md-block">Science with Subhrajoti</h2>
+                    <div class="div_roter">
+                        <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" style="float:left;height:50px;width:50px;border-radius:100px; box-shadow:0 4px 8px white;   " class=" d-md-inline" />
+                        <div id="roter">
+
+                        </div>
+                    </div>
+
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="btn"><i class="fa fa-bars">Menu</i></span>
@@ -234,9 +238,9 @@
                                             <ul style="color:white;font-weight:bold;text-indent:20px;color:white;">
                                                 <li style="color:white;">Former CBSE student</li>
                                                 <li style="color:white;">Completed my 10th with 89.6% score in CBSE</li>
-                                                <li style="color:white;">Pursued Science in 12th CBSE(PCMB),</li>
-                                                <li style="color:white;">got 6.0 SGPA in Sem 6 of B.Sc Physics Honours at University Of Calcutta</li>
-                                                <li style="color:white;">studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development(MERN)</li>
+                                                <li style="color:white;">Pursued Science in 12th CBSE(PCMB)</li>
+                                                <li style="color:white;">Got 6.0 SGPA in Sem 6 of B.Sc Physics Honours at University Of Calcutta</li>
+                                                <li style="color:white;">Studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development(MERN)</li>
                                             </ul>
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">My Skills:</h3>
                                             <ul id="science" style="list-style-type:none;color:white;font-weight:bold;text-indent:20px;color:white;display:flex;flex-wrap:wrap;flex-direction:row;justify-content:center;">
