--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
         <div style="position:sticky;height:100vh;">
             <div class="mb-0">
                 <div class="d-flex flex-column flex-md-row br">
-                    <div class="d-none d-md-block text-light text-center p-2" style="z-index:0;background:radial-gradient(blue,red);height:100vh;">
-                        <img id="testImage" class="" src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
+                    <div class="d-test text-light p-2" style="z-index:0;background:radial-gradient(blue,red);height:100vh;">
+                        <img id="testImage" class="mb-0" src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
         height:30%; width:250px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:10px;" />
-                        <h1 class="mt-lg-3">Subhrajoti Chakrabarty</h1>
-                        <h4 class="text-light mt-lg-2 mt-xl-2">An Aspiring Programmer</h4>
-                        <h4 class="text-light mt-2  mt-xl-2">Mobile.no: 8436514806</h4>
-                        <h4 class="text-light mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
+                        <div class="p-1 mt-0">
+                            <h1 class="mt-lg-3">Subhrajoti Chakrabarty</h1>
+                            <h4 class="text-light mt-lg-2 mt-xl-2">An Aspiring Programmer</h4>
+                            <h4 class="text-light mt-2  mt-xl-2">Mobile.no: 8436514806</h4>
+                            <h4 class="text-light mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
+                        </div>
                         <div class="mt-2 mt-xl-2">
                             <a href="https://www.youtube.com/@subhrajotichakrabarty/featured" target="_blank"><button class="a_btn" onmouseover="changeColor()" onmouseout="resetColor()" id="button">
                                     Visit Channel
@@ -247,6 +249,7 @@
                                                 <li class="li">HTML</li>
                                                 <li class="li">SQL</li>
                                                 <li class="li">CSS</li>
+                                                <li class="li">Flexbox</li>
                                                 <li class="li">Python</li>
                                                 <li class="li">BootStrap</li>
                                                 <li class="li">JavaScript</li>
