--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
                                                 <li style="color:white;">Former CBSE student</li>
                                                 <li style="color:white;">Completed my 10th with 89.6% score in CBSE</li>
                                                 <li style="color:white;">Pursued Science in 12th CBSE(PCMB)</li>
-                                                <li style="color:white;">Got 6.0 SGPA in Sem 6 of B.Sc Physics Honours at University Of Calcutta</li>
+                                                <li style="color:white;">Got 6.0 SGPA in Sem 6 of B.Sc Physics Honours at University of Calcutta</li>
                                                 <li style="color:white;">Studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development(MERN)</li>
+                                                <li style="color:white;">Currently working as a Computer Science/AI teacher at South Point Institute, CBSE</li>
                                             </ul>
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">My Skills:</h3>
                                             <ul id="science" style="list-style-type:none;color:white;font-weight:bold;text-indent:20px;color:white;display:flex;flex-wrap:wrap;flex-direction:row;justify-content:center;">
@@ -254,6 +255,7 @@
                                                 <li class="li">BootStrap</li>
                                                 <li class="li">JavaScript</li>
                                                 <li class="li">MongoDB</li>
+                                                <li class="li">Teaching</li>
                                             </ul>
                                             <section>
                                                 <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px lightgreen; margin-left:5px;"> What is Science? </h3>
