--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                             <marquee style="margin:5px;color:white;  text-decoration:underline;margin-bottom:0px;">
-                                <b>THIS IS A YOUTUBE CHANNEL FOR SCIENCE AND TECHNOLOGY, SO IF INTERESTED DO MAKE SURE TO <i style="color: red;">LIKE, SHARE AND <strong style=" color: red;">SUBSCRIBE</strong></i></b>
+                                <b>THIS IS A YOUTUBE CHANNEL FOR SCIENCE AND TECHNOLOGY, SO IF INTERESTED, DO MAKE SURE TO <i style="color: red;">LIKE, SHARE AND <strong style=" color: red;">SUBSCRIBE</strong></i></b>
                             </marquee>
                             <style>
                                 html,
@@ -238,12 +238,12 @@
                                         <section style="font-size:25px;">
                                             <h3 style="font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">Little Bit About Myself:</h3>
                                             <ul style="color:white;font-weight:bold;text-indent:20px;color:white;">
-                                                <li style="color:white;">Former CBSE student</li>
-                                                <li style="color:white;">Completed my 10th with 89.6% score in CBSE</li>
-                                                <li style="color:white;">Pursued Science in 12th CBSE(PCMB)</li>
-                                                <li style="color:white;">Got 6.0 SGPA in Sem 6 of B.Sc Physics Honours at University of Calcutta</li>
-                                                <li style="color:white;">Studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development(MERN)</li>
-                                                <li style="color:white;">Currently working as a Computer Science/AI teacher at South Point Institute, CBSE</li>
+                                                <li style="color:white;">Former CBSE student who got 9.43 CGPA in his AISSE CBSE 10th Exam 2019,</li>
+                                                <li style="color:white;">Then took PCMB in 12th CBSE(PCMB) cleared AISSCE with 7.7 CGPA,</li>
+                                                <li style="color:white;">Pursued a B.Sc. in Physics and got a 6.0 SGPA in SEM 6 from the University of Calcutta, </li>
+                                                <li style="color:white;">And currently doing Full Stacks (MERN) and DSA courses from CCBP Smart NXTWave,</li>
+                                                <li style="color:white;">Self-employed tutor for students of the CBSE board enrolled in the Science group and other subjects.</li>
+                                                <li style="color:white;">Currently working as a Computer Science and AI teacher at South Point Institute, CBSE in Udaynarayanpur, Howrah</li>
                                             </ul>
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">My Skills:</h3>
                                             <ul id="science" style="list-style-type:none;color:white;font-weight:bold;text-indent:20px;color:white;display:flex;flex-wrap:wrap;flex-direction:row;justify-content:center;">
